--- a/src/views/app-root.html
+++ b/src/views/app-root.html
@@ -1,9 +1,26 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">TapToKill</a>
+    </div>
+    
+  </div>
+</nav>
 <div class="container">
+    <div class="row">
+       
+    </div>
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-            <div class="well">
-                
+            <div class="boss" (click)="tapToKill()">
+                <img src="../assets/monster.png" alt="boss" height="100%" width="100%" />
+            </div>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" [attr.aria-valuenow]="progressPercentage"
+                aria-valuemin="0" aria-valuemax="100" [style.width]="progressPercentage" >
+                    {{hp}} / {{maxHp}}
+                </div>
             </div>
         </div>
         <div class="col-sm-2"></div>
